core. api-server: completed swagger API doc
