# core/api-server/response/response.go
@@ -1,6 +1,11 @@
 package response
 
-type LoginJWT struct {
+type LoginRequestJWT struct {
+	Username string `json:"username" example:"edoardo"`
+	Password string `json:"password" example:"Nethesis,1234"`
+}
+
+type LoginResponseJWT struct {
 	Code   int    `json:"code" example:"200"`
 	Token  string `json:"token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY3Rpb25zIjpbXSwiZXhwIjoxNjE5NTM0OTQ4LCJpZCI6ImVkb2FyZG8iLCJvcmlnX2lhdCI6MTYxODkzMDE0OCwicm9sZSI6IiJ9.bNRFa7MCQK-rTczOjLveXEWBqhjK-FWhnUPD3_ixcCI"`
 	Expire string `json:"expire" example:"2021-04-27T16:49:08+02:00"`
